qt/gen_qpixmap.nim


proc fcQPixmap_new(): ptr cQPixmap {.importc: "QPixmap_new".}
proc fcQPixmap_new2(w: cint, h: cint): ptr cQPixmap {.importc: "QPixmap_new2".}
proc fcQPixmap_new3(param1: pointer): ptr cQPixmap {.importc: "QPixmap_new3".}
proc fcQPixmap_new4(fileName: struct_miqt_string): ptr cQPixmap {.importc: "QPixmap_new4".}
proc fcQPixmap_new5(param1: pointer): ptr cQPixmap {.importc: "QPixmap_new5".}
proc fcQPixmap_new6(fileName: struct_miqt_string, format: cstring): ptr cQPixmap {.importc: "QPixmap_new6".}
proc fcQPixmap_new7(fileName: struct_miqt_string, format: cstring, flags: cint): ptr cQPixmap {.importc: "QPixmap_new7".}
proc fcQPixmap_operatorAssign(self: pointer, param1: pointer): void {.importc: "QPixmap_operatorAssign".}
proc fcQPixmap_swap(self: pointer, other: pointer): void {.importc: "QPixmap_swap".}
proc fcQPixmap_ToQVariant(self: pointer, ): pointer {.importc: "QPixmap_ToQVariant".}
proc fcQPixmap_isNull(self: pointer, ): bool {.importc: "QPixmap_isNull".}
proc fcQPixmap_devType(self: pointer, ): cint {.importc: "QPixmap_devType".}
proc fcQPixmap_width(self: pointer, ): cint {.importc: "QPixmap_width".}
proc fcQPixmap_height(self: pointer, ): cint {.importc: "QPixmap_height".}
proc fcQPixmap_size(self: pointer, ): pointer {.importc: "QPixmap_size".}
proc fcQPixmap_rect(self: pointer, ): pointer {.importc: "QPixmap_rect".}
proc fcQPixmap_depth(self: pointer, ): cint {.importc: "QPixmap_depth".}
proc fcQPixmap_defaultDepth(): cint {.importc: "QPixmap_defaultDepth".}
proc fcQPixmap_fill(self: pointer, ): void {.importc: "QPixmap_fill".}
proc fcQPixmap_fill2(self: pointer, device: pointer, ofs: pointer): void {.importc: "QPixmap_fill2".}
proc fcQPixmap_fill3(self: pointer, device: pointer, xofs: cint, yofs: cint): void {.importc: "QPixmap_fill3".}
proc fcQPixmap_mask(self: pointer, ): pointer {.importc: "QPixmap_mask".}
proc fcQPixmap_setMask(self: pointer, mask: pointer): void {.importc: "QPixmap_setMask".}
proc fcQPixmap_devicePixelRatio(self: pointer, ): float64 {.importc: "QPixmap_devicePixelRatio".}
proc fcQPixmap_setDevicePixelRatio(self: pointer, scaleFactor: float64): void {.importc: "QPixmap_setDevicePixelRatio".}
proc fcQPixmap_hasAlpha(self: pointer, ): bool {.importc: "QPixmap_hasAlpha".}
proc fcQPixmap_hasAlphaChannel(self: pointer, ): bool {.importc: "QPixmap_hasAlphaChannel".}
proc fcQPixmap_createHeuristicMask(self: pointer, ): pointer {.importc: "QPixmap_createHeuristicMask".}
proc fcQPixmap_createMaskFromColor(self: pointer, maskColor: pointer): pointer {.importc: "QPixmap_createMaskFromColor".}
proc fcQPixmap_grabWindow(param1: uint): pointer {.importc: "QPixmap_grabWindow".}
proc fcQPixmap_grabWidget(widget: pointer, rect: pointer): pointer {.importc: "QPixmap_grabWidget".}
proc fcQPixmap_grabWidgetWithWidget(widget: pointer): pointer {.importc: "QPixmap_grabWidgetWithWidget".}
proc fcQPixmap_scaled(self: pointer, w: cint, h: cint): pointer {.importc: "QPixmap_scaled".}
proc fcQPixmap_scaledWithQSize(self: pointer, s: pointer): pointer {.importc: "QPixmap_scaledWithQSize".}
proc fcQPixmap_scaledToWidth(self: pointer, w: cint): pointer {.importc: "QPixmap_scaledToWidth".}
proc fcQPixmap_scaledToHeight(self: pointer, h: cint): pointer {.importc: "QPixmap_scaledToHeight".}
proc fcQPixmap_transformed(self: pointer, param1: pointer): pointer {.importc: "QPixmap_transformed".}
proc fcQPixmap_trueMatrix(m: pointer, w: cint, h: cint): pointer {.importc: "QPixmap_trueMatrix".}
proc fcQPixmap_transformedWithQTransform(self: pointer, param1: pointer): pointer {.importc: "QPixmap_transformedWithQTransform".}
proc fcQPixmap_trueMatrix2(m: pointer, w: cint, h: cint): pointer {.importc: "QPixmap_trueMatrix2".}
proc fcQPixmap_toImage(self: pointer, ): pointer {.importc: "QPixmap_toImage".}
proc fcQPixmap_fromImage(image: pointer): pointer {.importc: "QPixmap_fromImage".}
proc fcQPixmap_fromImageReader(imageReader: pointer): pointer {.importc: "QPixmap_fromImageReader".}
proc fcQPixmap_load(self: pointer, fileName: struct_miqt_string): bool {.importc: "QPixmap_load".}
proc fcQPixmap_loadFromData(self: pointer, buf: ptr uint8, len: cuint): bool {.importc: "QPixmap_loadFromData".}
proc fcQPixmap_loadFromDataWithData(self: pointer, data: struct_miqt_string): bool {.importc: "QPixmap_loadFromDataWithData".}
proc fcQPixmap_save(self: pointer, fileName: struct_miqt_string): bool {.importc: "QPixmap_save".}
proc fcQPixmap_saveWithDevice(self: pointer, device: pointer): bool {.importc: "QPixmap_saveWithDevice".}
proc fcQPixmap_convertFromImage(self: pointer, img: pointer): bool {.importc: "QPixmap_convertFromImage".}
proc fcQPixmap_copy(self: pointer, x: cint, y: cint, width: cint, height: cint): pointer {.importc: "QPixmap_copy".}
proc fcQPixmap_copy2(self: pointer, ): pointer {.importc: "QPixmap_copy2".}
proc fcQPixmap_scroll(self: pointer, dx: cint, dy: cint, x: cint, y: cint, width: cint, height: cint): void {.importc: "QPixmap_scroll".}
proc fcQPixmap_scroll2(self: pointer, dx: cint, dy: cint, rect: pointer): void {.importc: "QPixmap_scroll2".}
proc fcQPixmap_cacheKey(self: pointer, ): clonglong {.importc: "QPixmap_cacheKey".}
proc fcQPixmap_isDetached(self: pointer, ): bool {.importc: "QPixmap_isDetached".}
proc fcQPixmap_detach(self: pointer, ): void {.importc: "QPixmap_detach".}
proc fcQPixmap_isQBitmap(self: pointer, ): bool {.importc: "QPixmap_isQBitmap".}
proc fcQPixmap_paintEngine(self: pointer, ): pointer {.importc: "QPixmap_paintEngine".}
proc fcQPixmap_operatorNot(self: pointer, ): bool {.importc: "QPixmap_operatorNot".}
proc fcQPixmap_fill1(self: pointer, fillColor: pointer): void {.importc: "QPixmap_fill1".}
proc fcQPixmap_createHeuristicMask1(self: pointer, clipTight: bool): pointer {.importc: "QPixmap_createHeuristicMask1".}
proc fcQPixmap_createMaskFromColor2(self: pointer, maskColor: pointer, mode: cint): pointer {.importc: "QPixmap_createMaskFromColor2".}
proc fcQPixmap_grabWindow2(param1: uint, x: cint): pointer {.importc: "QPixmap_grabWindow2".}
proc fcQPixmap_grabWindow3(param1: uint, x: cint, y: cint): pointer {.importc: "QPixmap_grabWindow3".}
proc fcQPixmap_grabWindow4(param1: uint, x: cint, y: cint, w: cint): pointer {.importc: "QPixmap_grabWindow4".}
proc fcQPixmap_grabWindow5(param1: uint, x: cint, y: cint, w: cint, h: cint): pointer {.importc: "QPixmap_grabWindow5".}
proc fcQPixmap_grabWidget2(widget: pointer, x: cint): pointer {.importc: "QPixmap_grabWidget2".}
proc fcQPixmap_grabWidget3(widget: pointer, x: cint, y: cint): pointer {.importc: "QPixmap_grabWidget3".}
proc fcQPixmap_grabWidget4(widget: pointer, x: cint, y: cint, w: cint): pointer {.importc: "QPixmap_grabWidget4".}
proc fcQPixmap_grabWidget5(widget: pointer, x: cint, y: cint, w: cint, h: cint): pointer {.importc: "QPixmap_grabWidget5".}
proc fcQPixmap_scaled3(self: pointer, w: cint, h: cint, aspectMode: cint): pointer {.importc: "QPixmap_scaled3".}
proc fcQPixmap_scaled4(self: pointer, w: cint, h: cint, aspectMode: cint, mode: cint): pointer {.importc: "QPixmap_scaled4".}
proc fcQPixmap_scaled2(self: pointer, s: pointer, aspectMode: cint): pointer {.importc: "QPixmap_scaled2".}
proc fcQPixmap_scaled32(self: pointer, s: pointer, aspectMode: cint, mode: cint): pointer {.importc: "QPixmap_scaled32".}
proc fcQPixmap_scaledToWidth2(self: pointer, w: cint, mode: cint): pointer {.importc: "QPixmap_scaledToWidth2".}
proc fcQPixmap_scaledToHeight2(self: pointer, h: cint, mode: cint): pointer {.importc: "QPixmap_scaledToHeight2".}
proc fcQPixmap_transformed2(self: pointer, param1: pointer, mode: cint): pointer {.importc: "QPixmap_transformed2".}
proc fcQPixmap_transformed22(self: pointer, param1: pointer, mode: cint): pointer {.importc: "QPixmap_transformed22".}
proc fcQPixmap_fromImage2(image: pointer, flags: cint): pointer {.importc: "QPixmap_fromImage2".}
proc fcQPixmap_fromImageReader2(imageReader: pointer, flags: cint): pointer {.importc: "QPixmap_fromImageReader2".}
proc fcQPixmap_load2(self: pointer, fileName: struct_miqt_string, format: cstring): bool {.importc: "QPixmap_load2".}
proc fcQPixmap_load3(self: pointer, fileName: struct_miqt_string, format: cstring, flags: cint): bool {.importc: "QPixmap_load3".}
proc fcQPixmap_loadFromData3(self: pointer, buf: ptr uint8, len: cuint, format: cstring): bool {.importc: "QPixmap_loadFromData3".}
proc fcQPixmap_loadFromData4(self: pointer, buf: ptr uint8, len: cuint, format: cstring, flags: cint): bool {.importc: "QPixmap_loadFromData4".}
proc fcQPixmap_loadFromData2(self: pointer, data: struct_miqt_string, format: cstring): bool {.importc: "QPixmap_loadFromData2".}
proc fcQPixmap_loadFromData32(self: pointer, data: struct_miqt_string, format: cstring, flags: cint): bool {.importc: "QPixmap_loadFromData32".}
proc fcQPixmap_save2(self: pointer, fileName: struct_miqt_string, format: cstring): bool {.importc: "QPixmap_save2".}
proc fcQPixmap_save3(self: pointer, fileName: struct_miqt_string, format: cstring, quality: cint): bool {.importc: "QPixmap_save3".}
proc fcQPixmap_save22(self: pointer, device: pointer, format: cstring): bool {.importc: "QPixmap_save22".}
proc fcQPixmap_save32(self: pointer, device: pointer, format: cstring, quality: cint): bool {.importc: "QPixmap_save32".}
proc fcQPixmap_convertFromImage2(self: pointer, img: pointer, flags: cint): bool {.importc: "QPixmap_convertFromImage2".}
proc fcQPixmap_copy1(self: pointer, rect: pointer): pointer {.importc: "QPixmap_copy1".}
proc fcQPixmap_scroll7(self: pointer, dx: cint, dy: cint, x: cint, y: cint, width: cint, height: cint, exposed: pointer): void {.importc: "QPixmap_scroll7".}
proc fcQPixmap_scroll4(self: pointer, dx: cint, dy: cint, rect: pointer, exposed: pointer): void {.importc: "QPixmap_scroll4".}
proc fQPixmap_virtualbase_devType(self: pointer, ): cint{.importc: "QPixmap_virtualbase_devType".}
proc fcQPixmap_override_virtual_devType(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_devType".}
proc fQPixmap_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QPixmap_virtualbase_paintEngine".}
proc fcQPixmap_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_paintEngine".}
proc fQPixmap_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QPixmap_virtualbase_metric".}
proc fcQPixmap_override_virtual_metric(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_metric".}
proc fQPixmap_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QPixmap_virtualbase_initPainter".}
proc fcQPixmap_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_initPainter".}
proc fQPixmap_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QPixmap_virtualbase_redirected".}
proc fcQPixmap_override_virtual_redirected(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_redirected".}
proc fQPixmap_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QPixmap_virtualbase_sharedPainter".}
proc fcQPixmap_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QPixmap_override_virtual_sharedPainter".}
proc fcQPixmap_delete(self: pointer) {.importc: "QPixmap_delete".}


func init*(T: type QPixmap, h: ptr cQPixmap): QPixmap =
  T(h: h)
proc create*(T: type QPixmap, ): QPixmap =

  QPixmap.init(fcQPixmap_new())
proc create*(T: type QPixmap, w: cint, h: cint): QPixmap =

  QPixmap.init(fcQPixmap_new2(w, h))
proc create*(T: type QPixmap, param1: gen_qsize.QSize): QPixmap =

  QPixmap.init(fcQPixmap_new3(param1.h))
proc create*(T: type QPixmap, fileName: string): QPixmap =

  QPixmap.init(fcQPixmap_new4(struct_miqt_string(data: fileName, len: csize_t(len(fileName)))))
proc create2*(T: type QPixmap, param1: QPixmap): QPixmap =

  QPixmap.init(fcQPixmap_new5(param1.h))
proc create*(T: type QPixmap, fileName: string, format: cstring): QPixmap =
